--- a/src/App.css
+++ b/src/App.css
@@ -41,3 +41,11 @@
   background-color: rgb(248, 108, 108);
   z-index: 3;
 }
+#root > div > div > div > div.MuiTableContainer-root.makeStyles-container-5 > table > thead > tr > th.MuiTableCell-root.MuiTableCell-head.MuiTableCell-alignLeft.MuiTableCell-paddingNone.MuiTableCell-stickyHeader{
+  z-index: 4;
+}
+#root > div > div > div > div.css-2b097c-container {
+  z-index: 5;
+  min-width: 200px;
+  max-width: 710px;
+}
